<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:text="@string/my_profile"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_below="@id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="6dp">
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/nama"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/twNama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-1dp"
                            android:hint="@string/nama"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/nim"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/twNim"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-1dp"
                            android:hint="@string/nim"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/fakultas"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/twFakultas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-1dp"
                            android:hint="@string/fakultas"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/prodi"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/twProdi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-1dp"
                            android:hint="@string/prodi"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/jenis_kelamin"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/twJenisKelamin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-1dp"
                            android:hint="@string/jenis_kelamin"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="50dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/pink"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/choco"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>